--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Projects"
     url: /projects/
             
-  - title: "CV"
-    url: /cv/
+  #- title: "CV"
+   # url: /cv/
     
   - title: "Contact"
     url: /contact/
