Changed ML engineer to data scientist

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 author:
   name             : "Juan Paredes"
   avatar           : "profile.png"
-  bio              : "PhD student and Machine learning engineer"
+  bio              : "PhD student and data scientist"
   location         : "Barcelona, Spain"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
