--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 # Site Author
 author:
   name             : "Juan Paredes"
-  avatar           : "profile.png"
+  avatar           : "Juan_Paredes_foto_original.png"
   bio              : "PhD student and data scientist"
   location         : "Barcelona, Spain"
   employer         :
