--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ facebook:
   publisher              :
 og_image                 :  # Open Graph/Twitter default site image
 # For specifying social profiles
-# - https://developers.google.com/structured-data/customize/social-profiles
+# - https://developers..com/structured-data/customize/social-profiles
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
@@ -75,7 +75,7 @@ social:
 
 # Analytics
 analytics:
-  provider               :  #"google-universal" # false (default), "google", "google-universal", "custom"
+  provider               :  #"-universal" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          :
 
@@ -85,7 +85,7 @@ author:
   name             : "Juan Paredes"
   avatar           : "Juan_Paredes_foto_original.png"
   bio              : "PhD candidate and data scientist"
-  location         : "Barcelona, Spain"
+  location         : "Santiago, Chile"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=6cSfVnIAAAAJ&hl" #"http://yourfullgooglescholarurl.com"
@@ -105,7 +105,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : # ADD!
-  orcid            : #"http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0002-5947-5495"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
