--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,8 @@
 main:
   - title: "Research"
     url: /research/
-        
+  - title: "CV"
+    url: /files/JuanParedes_CV.pdf
   - title: "Links of Interest"
     url: /links/
 
